# vercel-fastapi-backend

./: .gitignore  README.md  _Pipfile  main.py  pyproject.toml  requirements.txt  vercel.json
