[project]
name = "test-vercel-fastapi-backend"
version = "0.1.0"
description = "FastAPI backend deployed to Vercel"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "fastapi[standard]",
  "uvicorn[standard]",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[tool.poetry]
name = "test-vercel-fastapi-backend"
version = "0.1.0"
description = "FastAPI backend deployed to Vercel"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
fastapi = { version = "*", extras = ["standard"] }
uvicorn = { version = "*", extras = ["standard"] }

